--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="about-right">
                     <h2>Front End Developer Student</h2>
                     <p>Cursando Análise e Desenvolvimento de Sistemas, estudante Front-End. Sou extremamente esforçada,
-                        buscando sempre estar desenvolvendo minhas habilidades.</p>
+                        buscando sempre desenvolver minhas habilidades.</p>
                 </div>
             </div>
         </section>
